argocd/aws/203403084713/clusters/cbioportal-prod/apps/curation-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curation-dashboard-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/instance: curation-dashboard
spec:
  rules:
    - host: curation.cbioportal.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: curation-dashboard-backend
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: curation-dashboard-frontend
                port:
                  number: 8080
  tls:
    - hosts:
        - curation.cbioportal.org
      secretName: curation-cbioportal-cert
